--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -23,7 +23,7 @@ jobs:
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: -> # optional
+          BLOCKS: ['coding'] # optional
           CODE_LANG: cpp # optional
           TIME_RANGE: all_time # optional
           LANG_COUNT: 10 # optional
