--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,6 +3,7 @@ name: Waka Readme
 on:
   # for manual workflow trigger
   workflow_dispatch:
+  push:
   schedule:
     # runs at 12 AM UTC (5:30 AM IST)
     - cron: "0 0 * * *"
