--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -24,7 +24,7 @@ jobs:
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: ['coding'] # optional
+          BLOCKS: 'coding' # optional
           CODE_LANG: cpp # optional
           TIME_RANGE: all_time # optional
           LANG_COUNT: 10 # optional
